--- a/index.html
+++ b/index.html
@@ -161,17 +161,17 @@
                             <div class="process-1">
                                 <div class="process__item">
                                     <h2>How it Started ?</h2>
-                                    <h4>Our story strated in 2020, Feb 15th When I saw Chandana for first time in my brothers marriage, It was like a love at first sight. I'm generally not an outspoken guy but that day I felt like I should speak to her, and then when I spoke to her I felt "Yes, this is the one for me". I took her number but unfortunately lost it, upon that I forgot to ask her name. Later I tried to get contact through multiple ways but tough luck, I couldn't. Then I told myself if its for me It will come back to me.</h4>
-                                </div>
-                                <div class="process__item">
-                                    <h2>After 3 years</h2>
-                                    <h4> Later in 2023, her profile was brought to me by my brothers, thats when I confirmed myself yes, we are destined to be together. I personally met her on 6th of May, and took her opinion.
-                                        Within a month our families met, and Finally we got engaged and marriage dates got fixed.</h4>
+                                    <h4>Our story strated in 2021, Feb 15th When I saw Chandana for first time in my brothers marriage, It was like a love at first sight. I'm generally not an outspoken guy but that day I felt like I should speak to her, and then when I spoke to her I felt "Yes, this is the one for me". I took her number but unfortunately lost it, upon that I forgot to ask her name. Later I tried to get contact through multiple ways but tough luck, I couldn't. Then I told myself if its for me It will come back to me.</h4>
                                 </div>
                                 <div class="process__item">
                                     <h2>Chandana's First Meet</h2>
-                                    <h4>First time when I met vasanth in May 2023, I was nervous, not sure about anything.. and what not? but when I came back home after meeting him, I was sure about him. All I ever asked for my guy was to be replica of my dad, and he is! I mean he literally IS.. What else can I ask for?
+                                    <h4>I met Vasanth in Feb 2021 in a family gathering. As we share a common prefession the discussion was more casual on that. There was a buzz about us in family for 2 years though we were not in touch. But in later 2023, We again met and I was nervous, not sure about anything.. and what not? but when I came back home after meeting him, I was thinking about him. All I ever asked for my guy was to be replica of my dad, and his aura was same! I mean he literally IS.. What else can I ask for?
                                     </h4>
+                                </div>
+                                <div class="process__item">
+                                    <h2>After 2 years</h2>
+                                    <h4> Later in 2023, her profile was brought to me by my brothers, thats when I confirmed myself yes, we are destined to be together. I personally met her on 6th of May, and took her opinion.
+                                        Within a month our families met, and Finally we got engaged and marriage dates got fixed.</h4>
                                 </div>
                                 <div class="process__item">
                                     <h2>How its going ?</h2>
